--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsdom": "^21.1.7",
     "typescript": "^5.5.3"
   },
   "dependencies": {
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "jsdom": "^26.1.0",
     "ts-node-dev": "^2.0.0"
   }
 }
